activation_tests.py: Add debug output
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/installation-tests.yml
+++ b/.github/workflows/installation-tests.yml
@@ -23,8 +23,11 @@ jobs:
     steps:
       - name: Install and run tests
         run: |
+          set -x
           cd /ncp-test-automation/bin
           su ncp
+          id
+          echo $HOME
           bash entrypoint.sh
           export SSH_PRIVATE_KEY_PATH="$(echo ~/.ssh/automation_ssh_key)"
           bash ncp-install-test.sh "${GIT_REF}"
