activation_tests.py: Use github user for commands via su
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/installation-tests.yml
+++ b/.github/workflows/installation-tests.yml
@@ -25,11 +25,10 @@ jobs:
         run: |
           set -x
           cd /ncp-test-automation/bin
-          su ncp
           id
           echo $HOME
-          bash entrypoint.sh
-          export SSH_PRIVATE_KEY_PATH="$(echo ~/.ssh/automation_ssh_key)"
-          bash ncp-install-test.sh "${GIT_REF}"
+          su - github -c 'bash entrypoint.sh'
+          #export SSH_PRIVATE_KEY_PATH="$(echo ~/.ssh/automation_ssh_key)"
+          su - github -c "bash ncp-install-test.sh '${GIT_REF}'"
 
 
