activation_tests.py: Set ssh private key path explicitly
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/installation-tests.yml
+++ b/.github/workflows/installation-tests.yml
@@ -28,7 +28,7 @@ jobs:
           id
           echo $HOME
           su github -c 'bash /ncp-test-automation/bin/entrypoint.sh'
-          #export SSH_PRIVATE_KEY_PATH="$(echo ~/.ssh/automation_ssh_key)"
+          export SSH_PRIVATE_KEY_PATH="/home/github/.ssh/automation_ssh_key"
           su github -c "bash /ncp-test-automation/bin/ncp-install-test.sh '${GIT_REF}'"
 
 
