--- a/.github/workflows/installation-tests.yml
+++ b/.github/workflows/installation-tests.yml
@@ -31,6 +31,6 @@ jobs:
           env
           bash /ncp-test-automation/bin/entrypoint.sh
           export SSH_PRIVATE_KEY_PATH="/root/.ssh/automation_ssh_key"
-          bash /ncp-test-automation/bin/ncp-install-test.sh '${GIT_REF}'
+          bash /ncp-test-automation/bin/ncp-install-test.sh "${GIT_REF}"
 
 
