installation-tests.yml: Make sure, ssh key is added to session
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/installation-tests.yml
+++ b/.github/workflows/installation-tests.yml
@@ -31,6 +31,8 @@ jobs:
           env
           bash /ncp-test-automation/bin/entrypoint.sh
           export SSH_PRIVATE_KEY_PATH="/root/.ssh/automation_ssh_key"
+          eval $(ssh-agent)
+          ssh-add "$SSH_PRIVATE_KEY_PATH"
           bash /ncp-test-automation/bin/ncp-install-test.sh "${GIT_REF}"
 
 
