--- a/.github/workflows/installation-tests.yml
+++ b/.github/workflows/installation-tests.yml
@@ -25,10 +25,9 @@ jobs:
         run: |
           set -x
           cd /ncp-test-automation/bin
-          id
-          echo $HOME
           export HOME="/root"
-          env
+          echo "Test ping cmd"
+          ping -c 1 -w 5 1.1.1.1
           bash /ncp-test-automation/bin/entrypoint.sh
           export SSH_PRIVATE_KEY_PATH="/root/.ssh/automation_ssh_key"
           eval $(ssh-agent)
