installation-tests.yml: Use relative paths
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/installation-tests.yml
+++ b/.github/workflows/installation-tests.yml
@@ -32,9 +32,9 @@ jobs:
         run: |
           set -x
           cd /ncp-test-automation/bin
-          bash /ncp-test-automation/bin/entrypoint.sh
+          bash entrypoint.sh
           
-          source ./library.sh
+          source library.sh
           
           echo "Initialize Terraform"
           for path in "$TF_PROJECT_SETUP" "$TF_SNAPSHOT" "$TF_SNAPSHOT_PROVIDER" "$TF_TEST_ENV"
