installation-tests.yml: Update function name to latest version of ncp-test-automation
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/installation-tests.yml
+++ b/.github/workflows/installation-tests.yml
@@ -45,7 +45,7 @@ jobs:
           do tf-init "$path"; done
           
           echo "Setting up project"
-          hcloud_clear_root_key
+          hcloud-clear-root-key
           tf-apply "$TF_PROJECT_SETUP" "$TF_VAR_FILE"
           ssh_pubkey_fprint="$(tf-output "$TF_PROJECT_SETUP" admin_ssh_pubkey_fingerprint)"
           
