installation-tests.yml: Fix label name for filtering servers in cleanup job
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/installation-tests.yml
+++ b/.github/workflows/installation-tests.yml
@@ -143,7 +143,7 @@ jobs:
     steps:
       - name: Teardown VMs
         run: |
-          for server in $(hcloud server list -o noheader -o columns=id -l "cicd=-${UID}")
+          for server in $(hcloud server list -o noheader -o columns=id -l "ci=${UID}")
           do
             hcloud server delete "$server"
           done
