installation-tests.yml: Set SSH_PRIVATE_KEY and SSH_PUBLIC_KEY env variables before running entrypoint.sh
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/installation-tests.yml
+++ b/.github/workflows/installation-tests.yml
@@ -35,6 +35,8 @@ jobs:
         id: prepare-environment
         run: |
           ssh-keygen -t ed25519 -f "$HOME/.ssh/automation_ssh_key"
+          export SSH_PRIVATE_KEY="$(cat $HOME/.ssh/automation_ssh_key)"
+          export SSH_PUBLIC_KEY="$(cat $HOME/.ssh/automation_ssh_key.pub)"
           
           set -x
           
