installation-tests.yml: Use new UID per workflow run
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/installation-tests.yml
+++ b/.github/workflows/installation-tests.yml
@@ -16,7 +16,7 @@ jobs:
       image: thecalcaholic/ncp-test-automation:latest
       env:
         HCLOUD_TOKEN: "${{ secrets.TEST_AUTOMATION_HCLOUD_API_TOKEN }}"
-        UID: debug-install # "${{ github.run_id }}-install"
+        UID: "${{ github.run_id }}-install"
     env:
       GIT_REF: "${{ github.event.inputs.tag || github.ref_name || github.head_ref }}"
       HOME: '/root'
@@ -90,7 +90,7 @@ jobs:
       image: thecalcaholic/ncp-test-automation:latest
       env:
         HCLOUD_TOKEN: "${{ secrets.TEST_AUTOMATION_HCLOUD_API_TOKEN }}"
-        UID: debug-install # "${{ github.run_id }}-install"
+        UID: "${{ github.run_id }}-install"
     env:
       GIT_REF: "${{ github.event.inputs.tag || github.ref_name || github.head_ref }}"
       SERVER_ADDRESS: "${{ needs.setup-test-instance.outputs.server_address }}"
@@ -144,7 +144,7 @@ jobs:
       image: thecalcaholic/ncp-test-automation:latest
       env:
         HCLOUD_TOKEN: "${{ secrets.TEST_AUTOMATION_HCLOUD_API_TOKEN }}"
-        UID:  debug-install # "${{ github.run_id }}-install"
+        UID:  "${{ github.run_id }}-install"
     env:
       GIT_REF: "${{ github.event.inputs.tag || github.ref_name || github.head_ref }}"
       HOME: '/root'
