installation-tests.yml: Trigger on feature branch
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/installation-tests.yml
+++ b/.github/workflows/installation-tests.yml
@@ -9,8 +9,7 @@ on:
         type: string
   push:
     branches:
-      - master
-      - devel
+      - feature/cicd-integration-tests
     tags:
       - v*
 
