installation-tests.yml: Fix trailing quote
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/installation-tests.yml
+++ b/.github/workflows/installation-tests.yml
@@ -23,7 +23,7 @@ jobs:
     steps:
       - run: |
           set -x
-          ssh-keygen -t ed25519 -f "$HOME/.ssh/automation_ssh_key
+          ssh-keygen -t ed25519 -f "$HOME/.ssh/automation_ssh_key"
       - name: upload ssh private key as artifact
         uses: actions/upload-artifact@v3
         with:
