action.yml: Use absolute path to action script
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/actions/create-test-instance/action.yml
+++ b/.github/actions/create-test-instance/action.yml
@@ -25,6 +25,7 @@ runs:
   env:
     HCLOUD_TOKEN: ${{ inputs.hcloud_token }}
     UID: ${{ inputs.uid }}
+    HOME: /root
   args:
-    - actions/create-test-instance.sh
+    - /ncp-test-automation/bin/actions/create-test-instance.sh
     - ${{ inputs.version }}
