action.yml: Overwrite docker entrypoint
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/actions/create-test-instance/action.yml
+++ b/.github/actions/create-test-instance/action.yml
@@ -26,6 +26,8 @@ runs:
     HCLOUD_TOKEN: ${{ inputs.hcloud_token }}
     UID: ${{ inputs.uid }}
     HOME: /root
+  entrypoint: "/bin/bash"
   args:
+    - /ncp-test-automation/bin/entrypoint.sh
     - /ncp-test-automation/bin/actions/create-test-instance.sh
     - ${{ inputs.version }}
